syntax = "proto3";

package calculator;

option java_package = "org.example.calculator";
option java_multiple_files = true;

message SumRequest{
  int32 first_number = 1;
  int32 second_number = 2;
}

message SumResponse{
  int32 sum_result = 1;
}

service CalculatorService{
  rpc CalculateSum(SumRequest) returns(SumResponse) {}
}